--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             Calculate
           </button>
         </div>
+        <!--Answer output from button-->
         <div class="page-content">The answer is ...</div>
+        <div class="donut">
+          <img src="./images/donut.png" alt="Donut" />
+        </div>
       </main>
     </div>
   </body>
