refreshed for pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </button>
         </div>
         <!--Answer output from button-->
-        <div class="page-content">The answer is ...</div>
+        <div class="page-content">The answer is ....</div>
         <div class="donut">
           <img src="./images/donut.png" alt="Donut" />
         </div>
