--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.lime-green.min.css"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
     <title>{$websiteTitle}</title>
   </head>
@@ -76,9 +80,7 @@
         </div>
         <!--Answer output from button-->
         <div class="page-content">The answer is ...</div>
-        <div class="donut">
-          <img src="./images/donut.png" alt="Donut" />
-        </div>
+        <img src="./images/donut.png" alt="Donut" class="donut" />
       </main>
     </div>
   </body>
