changed location of the picutre

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       </div>
       <main class="mdl-layout__content">
         <div class="page-content">
+          <!--Donut picture-->
+          <img src="./images/donut.png" alt="Donut" class="donut" />
           <!--Text below header-->
           <div class="page-content">Enter number to calculate</div>
           <!-- Numeric Textfield with Floating Label -->
@@ -80,7 +82,6 @@
         </div>
         <!--Answer output from button-->
         <div class="page-content">The answer is ...</div>
-        <img src="./images/donut.png" alt="Donut" class="donut" />
       </main>
     </div>
   </body>
